<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout_two"
    android:orientation="vertical">
    <LinearLayout
        android:background="#3BBDCD"
        android:id="@+id/Light"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="1"
            android:src="@drawable/three"
            />
        <TextView

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Buttom_SingUpTop"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/text_color"

            />




    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
    android:weightSum="6"
    >
    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/user"
        android:layout_weight="1"
        ></ImageView>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/EditText_FullName"></EditText>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"

        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="6"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/call"
            android:layout_weight="1"
            ></ImageView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/EditText_PhoneNumber"
            ></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"

        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="6"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/gmail"
            android:layout_weight="1"
            ></ImageView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/EditText_Gmail"
            ></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"

        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="6"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/rectangular"
            android:layout_weight="2"
            ></ImageView>
        <EditText
           android:layout_marginRight="@dimen/_20sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/EditText_Iam"
            ></EditText>
        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_Farmer" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_Teacher_Professor" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_Student" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_Dealer_Distributor" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <Button
            android:layout_marginLeft="@dimen/_95sdp"
           android:background="@drawable/radius"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Buttom_SingUp"
            ></Button>
    </LinearLayout>
</LinearLayout>