<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
<LinearLayout
    android:background="#918E8B"
    android:id="@+id/Light"
    android:weightSum="5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    >
    <TextView

        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/button_Material"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_weight="4"
        android:src="@drawable/more"
        android:paddingLeft="@dimen/_90sdp"/>



</LinearLayout>
    <LinearLayout
        android:layout_below="@+id/Light"
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        android:layout_height="wrap_content"
        android:weightSum="4"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/EditText_firsName"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/last_name"
        android:layout_below="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_marginTop="-40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        android:weightSum="4"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/EditText_lastName"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/Visit_Type"
        android:layout_below="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        android:weightSum="4"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_visitType"
            android:layout_weight="1.5"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Female" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/Visit_Type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
        <Button
            android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_contineu"
        android:padding="15dp"
            android:layout_weight="2"
        ></Button>
        <Button
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:padding="15dp"
            ></Button>
    </LinearLayout>

</RelativeLayout>